--- a/src/services/IPS.Identidade.API/IPS.Identidade.API.csproj
+++ b/src/services/IPS.Identidade.API/IPS.Identidade.API.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Folder Include="Extensions\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -17,9 +18,9 @@
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="6.0.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.0" />
-	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0" />
+	  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.0" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.0.0" />
   </ItemGroup>
 
