--- a/src/building blocks/IPS.Core/IPS.Core.csproj
+++ b/src/building blocks/IPS.Core/IPS.Core.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Polly" Version="6.0.1" />
+	  <PackageReference Include="FluentValidation" Version="8.6.2" />
+	  <PackageReference Include="mediatr" Version="8.0.1" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
