--- a/src/services/IPS.Identidade.API/IPS.Identidade.API.csproj
+++ b/src/services/IPS.Identidade.API/IPS.Identidade.API.csproj
@@ -25,7 +25,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\building blocks\IPS.MessageBus\IPS.MessageBus.csproj" />
     <ProjectReference Include="..\..\building blocks\IPS.WebApi.Core\IPS.WebApi.Core.csproj" />
+    <ProjectReference Include="..\IPS.Usuario.API\IPS.Usuario.API.csproj" />
   </ItemGroup>
 
 </Project>
