--- a/src/services/IPS.Usuario.API/IPS.Usuario.API.csproj
+++ b/src/services/IPS.Usuario.API/IPS.Usuario.API.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\building blocks\IPS.Core\IPS.Core.csproj" />
+    <ProjectReference Include="..\..\building blocks\IPS.MessageBus\IPS.MessageBus.csproj" />
     <ProjectReference Include="..\..\building blocks\IPS.WebApi.Core\IPS.WebApi.Core.csproj" />
   </ItemGroup>
 
