--- a/src/services/IPS.Usuario.API/IPS.Usuario.API.csproj
+++ b/src/services/IPS.Usuario.API/IPS.Usuario.API.csproj
@@ -9,7 +9,7 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="8.6.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
+	<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.0" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="6.0.0" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.0" />
