--- a/src/services/IPS.Feed.API/IPS.Feed.API.csproj
+++ b/src/services/IPS.Feed.API/IPS.Feed.API.csproj
@@ -7,16 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controller\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.0" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="6.0.0" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0" />
 	<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.0.0" />
+
   </ItemGroup>
 
   <ItemGroup>
