--- a/src/services/IPS.Feed.API/IPS.Feed.API.csproj
+++ b/src/services/IPS.Feed.API/IPS.Feed.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,19 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.0" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="6.0.0" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0" />
-	<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.0.0" />
-
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\building blocks\IPS.Core\IPS.Core.csproj" />
     <ProjectReference Include="..\..\building blocks\IPS.WebApi.Core\IPS.WebApi.Core.csproj" />
+    <ProjectReference Include="..\IPS.Feed.Domain\IPS.Feed.Domain.csproj" />
+    <ProjectReference Include="..\IPS.Feed.Infa\IPS.Feed.Infa.csproj" />
   </ItemGroup>
 
 </Project>
