#Issue 2 - ValidationResult ao adicionar Usuario - Feature

--- a/src/services/IPS.Usuario.API/IPS.Usuario.API.csproj
+++ b/src/services/IPS.Usuario.API/IPS.Usuario.API.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\..\building blocks\IPS.WebApi.Core\IPS.WebApi.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Handlers\" />
+  </ItemGroup>
+
 </Project>
