First validation in success

--- a/src/services/IPS.Usuario.API/IPS.Usuario.API.csproj
+++ b/src/services/IPS.Usuario.API/IPS.Usuario.API.csproj
@@ -26,4 +26,7 @@
     <ProjectReference Include="..\..\building blocks\IPS.WebApi.Core\IPS.WebApi.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Remove="appsettings.Development.json" />
+  </ItemGroup>
 </Project>
