--- a/src/building blocks/IPS.Core/IPS.Core.csproj
+++ b/src/building blocks/IPS.Core/IPS.Core.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Polly" Version="6.0.1" />
 	  <PackageReference Include="FluentValidation" Version="8.6.2" />
 	  <PackageReference Include="mediatr" Version="8.0.1" />
