--- a/src/services/IPS.Usuario.API/IPS.Usuario.API.csproj
+++ b/src/services/IPS.Usuario.API/IPS.Usuario.API.csproj
@@ -7,8 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="FirebaseAuthentication.net" Version="2.1.3" />
+	<PackageReference Include="FirebaseDatabase.net" Version="4.2.0" />
+	<PackageReference Include="FirebaseStorage.net" Version="1.0.3" />
     <PackageReference Include="FluentValidation" Version="8.6.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
 	<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.0" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="6.0.0" />
