Alteração na camada Feed - FIX

--- a/src/services/IPS.Feed.API/appsettings.json
+++ b/src/services/IPS.Feed.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=144.22.221.232;Port=5432;Database=inputsocial;Username=postgres;Password=rootroot;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
