--- a/src/services/IPS.Feed.API/IPS.Feed.API.csproj
+++ b/src/services/IPS.Feed.API/IPS.Feed.API.csproj
@@ -4,9 +4,11 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>af7d3760-4fbb-4f64-b079-1c69e807663a</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FirebaseDatabase.net" Version="4.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.0.0" />
   </ItemGroup>
 
