Incluindo comentario(SPA) - Feature

--- a/src/services/IPS.Feed.API/appsettings.json
+++ b/src/services/IPS.Feed.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=2222;Database=postgres;Username=postgres;Password=rootroot;"
+    "DefaultConnection": "Host=144.22.221.232;Port=5432;Database=inputsocial;Username=postgres;Password=rootroot;"
   },
   "Logging": {
     "LogLevel": {
